Add set password endpoint
